// background job stuff
syntax = "proto3";

package jobs;

message SendEmailPayload {
  string sender_name = 1;
  string sender_email = 2;
  string recipient = 3;
  string subject = 4;
  string plain = 5;
  string html = 6;
  // list-unsubscribe email header
  string list_unsubscribe_header = 7;
  // source data as to where this email came from
  string source_data = 8;
}

message HandleNotificationPayload {
  // the database table private key
  int64 notification_id = 1;
}

message FinalizeStrongVerificationPayload {
  int64 verification_attempt_id = 1;
}

message FanNotificationsPayload {
  string topic = 1;
  string action = 2;
  string key = 3;
  string avatar_key = 4;
  string icon = 5;
  string title = 6;
  string content = 7;
  string link = 8;

  string fan_func = 9;
  string fan_func_data = 10;
}
